// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeerInfo Component should render when loading 1`] = `
<div>
  <div
    class="beerInfo"
  >
    <div
      class="loadingText"
    >
      Loading ....
    </div>
    <img
      class="loadingImage"
      src="https://media4.giphy.com/media/dt91SdhwBusuZalJkG/giphy.gif?cid=ecf05e4769y62aeey7sw7k7bcuiu66q3qyjobrh2exgafgl6&rid=giphy.gif"
    />
  </div>
</div>
`;

exports[`BeerInfo Component should render with beer info 1`] = `
<div>
  <div
    class="beerInfo"
  >
    <h2
      class="beerName beerInfoTitle"
    >
      11.5° PLATO
    </h2>
    <h3
      class="beerSubtitle"
    >
      Session IPA
    </h3>
    <div>
      Sorry something went wrong
    </div>
    <ul
      class="breweries"
    >
      <li
        class="brewery"
      >
        <a
          class="breweryName"
          href="/brewery/nHLlnK"
        >
          Sierra Nevada Brewing Company
        </a>
        <a
          class="breweryLink"
          href="http://www.sierranevada.com/"
        >
          http://www.sierranevada.com/
        </a>
        <img
          alt="Sierra Nevada Brewing Company"
          class="breweryImage"
          src="https://brewerydb-images.s3.amazonaws.com/brewery/nHLlnK/upload_IClwuZ-medium.png"
        />
        <p
          class="LocationTitle"
        >
          Locations:
        </p>
        <ul
          class="locations"
        >
          <li
            class="location"
          >
            <p>
              Main Brewery
            </p>
            <p>
              Type: Micro Brewery
            </p>
            <p>
              California
            </p>
            <p>
              95928
            </p>
          </li>
          <li
            class="location"
          >
            <p>
              Asheville
            </p>
            <p>
              Type: Micro Brewery
            </p>
            <p>
              North Carolina
            </p>
            <p>
              28732
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BeerInfo Component should render with error 1`] = `
<div>
  <div
    class="beerInfo"
  >
    <div>
      Sorry something went wrong
    </div>
  </div>
</div>
`;
